syntax = "proto3";

option go_package = ".;pb";
package pb;
import "pb/feed.proto";

message FavoriteActionRequest {
  int64 userID = 1;
  int64 videoID = 2;
  int64 actionType = 3;
}

message FavoriteActionResponse {

}

message FavoriteListRequest {
  int64 userID = 1;
}

message FavoriteListResponse {
  repeated  Video list = 1;
}





service FavoriteService {
  rpc Action(FavoriteActionRequest) returns (FavoriteActionResponse);
  rpc List(FavoriteListRequest) returns (FavoriteListResponse);
}